# jons-mcp-rust-debug

./: .gitignore  COMPLETE_FIX_SUMMARY.md  DIAGNOSIS_SUMMARY.md  FINAL_FIXES_SUMMARY.md  FINAL_RECOMMENDATIONS.md  LICENSE  README.md  README_DEBUGGING.md  cleanup_test_files.sh  lldb_mi_approach.md  lldb_python_api_example.py  pyproject.toml  rustdebugconfig.json.example  test_manual.py
src/: __init__.py  jons_mcp_rust_debug.py
src/jons_mcp_rust_debug/: __init__.py  constants.py  exceptions.py  lldb_client.py  server.py  utils.py
src/jons_mcp_rust_debug/tools/: __init__.py  breakpoints.py  diagnostics.py  execution.py  inspection.py  session.py  stack.py  threads.py  watchpoints.py
test_samples/: Cargo.toml  async_tests.rs  sample_program.rs  sample_tests.rs
tests/: __init__.py  conftest.py  test_integration.py  test_lldb_client.py  test_mcp_tools.py  test_rust_debug_client.py  test_tools.py  test_utils.py
